--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "sass": "^1.59.2",
+    "sharp": "^0.33.0",
     "spark-md5": "^3.0.2",
     "use-debounce": "^9.0.4",
     "zustand": "^4.3.8"
@@ -71,8 +72,5 @@
     "prettier": "^3.0.2",
     "typescript": "5.2.2",
     "webpack": "^5.88.1"
-  },
-  "resolutions": {
-    "lint-staged/yaml": "^2.2.2"
   }
 }
