--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "sharp": "^0.33.0",
     "spark-md5": "^3.0.2",
     "use-debounce": "^9.0.4",
+    "zod": "^3.22.4",
     "zustand": "^4.3.8"
   },
   "devDependencies": {
