--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "proxy-dev": "sh ./scripts/init-proxy.sh && proxychains -f ./scripts/proxychains.conf yarn dev"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.478.0",
-    "@aws-sdk/s3-request-presigner": "^3.478.0",
+    "@aws-sdk/client-s3": "^3.414.0",
+    "@aws-sdk/s3-request-presigner": "^3.414.0",
     "@fortaine/fetch-event-source": "^3.0.6",
     "@hello-pangea/dnd": "^16.5.0",
     "@svgr/webpack": "^6.5.1",
     "@vercel/analytics": "^0.1.11",
-    "axios": "^1.6.2",
-    "cheerio": "1.0.0-rc.12",
-    "duck-duck-scrape": "^2.2.5",
-    "emoji-picker-react": "^4.6.0",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "duck-duck-scrape": "^2.2.4",
+    "@vercel/speed-insights": "^1.0.2",
+    "emoji-picker-react": "^4.5.15",
     "encoding": "^0.1.13",
     "fuse.js": "^7.0.0",
     "html-entities": "^2.4.0",
@@ -34,44 +35,45 @@
     "https-proxy-agent": "^7.0.2",
     "langchain": "^0.0.212",
     "mermaid": "^10.6.1",
-    "nanoid": "^5.0.4",
-    "next": "^13.5.6",
-    "node-fetch": "^3.3.2",
-    "openai": "^4.24.1",
+    "nanoid": "^5.0.3",
+    "next": "^13.4.9",
+    "node-fetch": "^3.3.1",
+    "openai": "^4.6.0",
     "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
-    "react-router-dom": "^6.21.1",
+    "react-router-dom": "^6.15.0",
     "rehype-highlight": "^6.0.0",
     "rehype-katex": "^6.0.3",
-    "remark-breaks": "^3.0.3",
+    "remark-breaks": "^3.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
-    "sass": "^1.69.5",
-    "sharp": "^0.33.1",
+    "sass": "^1.59.2",
     "spark-md5": "^3.0.2",
     "use-debounce": "^9.0.4",
-    "zod": "^3.22.4",
-    "zustand": "^4.4.7"
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.9",
-    "@types/html-to-text": "^9.0.4",
-    "@types/node": "^20.10.5",
-    "@types/react": "^18.2.45",
-    "@types/react-dom": "^18.2.18",
-    "@types/react-katex": "^3.0.4",
+    "@types/html-to-text": "^9.0.1",
+    "@tauri-apps/cli": "1.5.7",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7",
+    "@types/react-katex": "^3.0.0",
     "@types/spark-md5": "^3.0.4",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
+    "eslint": "^8.49.0",
     "eslint-config-next": "13.4.19",
-    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.3",
-    "lint-staged": "^13.3.0",
-    "prettier": "^3.1.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.2",
+    "prettier": "^3.0.2",
     "typescript": "5.2.2",
-    "webpack": "^5.89.0"
+    "webpack": "^5.88.1"
+  },
+  "resolutions": {
+    "lint-staged/yaml": "^2.2.2"
   }
 }
